test/bootstrap/errors/fn-arg-len-mismatch/fn-arg-len-mismatch.foster
snafuinclude Text "text";

main = {
 expect_i1 False;
 print_i1 (prim __COMPILES__ (f g0));
};

g0 = { () };

// f :: { { Int32 => () @() } => () @() }
// f :: { { Int32 => () @??FX } => () @??FX }
// f :: { forall FX, { Int32 => () @FX } => () @FX }
f = { c : { Int32 => () } => c 0 };
